<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".multiUser.MultiUserFragment1">

    <ImageButton
        android:id="@+id/ibLogOut"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@color/purple_baseline"
        android:contentDescription="@string/logout"
        android:minWidth="32dp"
        android:src="@drawable/ic_outline_exit_to_app_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:tint="@color/light_blue" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:background="@color/purple_baseline"
        android:text="@string/groups"
        android:textColor="@color/light_blue"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGroups"
        android:layout_width="match_parent"
        android:layout_height="628dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/dark_blue"
        android:contentDescription="@string/new_group"
        android:src="@drawable/ic_outline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>